...



        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:layout_marginTop="10dp"
            android:inputType="textEmailAddress"
            app:met_floatingLabel="normal"
            android:hint="Email"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            app:met_floatingLabel="normal"
            android:hint="Password"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login"
            android:id="@+id/btn_login"
            android:background="@color/colorPrimary"
            android:textColor="@color/mapboxWhite"
            android:layout_marginTop="10dp"/>


        <TextView
...
