<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e6e6e6"
    tools:context=".MessageActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/mapnoxGrayLight"
            android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/MenuStyle">


            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/profile_image"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/username"
                android:layout_marginStart="25dp"
                android:textColor="@color/Black"
                android:textStyle="bold"
                />


        </android.support.v7.widget.Toolbar>


    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_send"
        android:layout_below="@+id/bar_layout"
        android:id="@+id/recycle_view"
        android:transcriptMode="alwaysScroll">

    </android.support.v7.widget.RecyclerView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_send"
        android:padding="5dp"
        android:background="#fff"
        android:layout_alignParentBottom="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_send"
            android:background="@android:color/transparent"
            android:hint="Type a message..."

            android:layout_toStartOf="@id/btn_send"
            android:layout_centerVertical="true"/>

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_action_name"
            android:id="@+id/btn_send"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>


</RelativeLayout>