...
        android:enabled="true"
        android:icon="@drawable/baseline_local_atm_black_18dp"
        android:title="@string/coins"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_friends"
        android:enabled="true"
        android:icon="@drawable/baseline_group_black_18dp"
        android:title="@string/friends"
        app:showAsAction="ifRoom"/>

</menu>
